# nekvorepo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
docs/: project_definition_v1.docx  project_definition_v2.docx  project_definition_v3.docx  project_definition_v4.docx  project_definition_v5.docx  project_definition_v7.docx  project_definition_v8.docx  project_definition_v9.docx
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
k8s/: README.md
services/database-migrations/: Dockerfile  entrypoint.py  init_roles.py  pyproject.toml
services/database-migrations/migrations/: env.py
services/database-migrations/migrations/versions/: 001_initial_schema.py  002_schema_corrections.py  003_commit_changes_summary.py  004_author_email.py  005_commit_summary_description.py  006_draft_id_on_delete_set_null.py  007_schema_cleanup.py  008_per_service_roles.py  009_users_table.py  010_repo_delete_grants.py
services/identity-service/: Dockerfile  pyproject.toml
services/identity-service/app/: database.py  main.py
services/identity-service/app/api/: deps.py
services/identity-service/app/api/v1/: api.py
services/identity-service/app/api/v1/endpoints/: auth.py  internal.py  invites.py  members.py  repos.py  users.py
services/identity-service/app/core/: config.py  security.py
services/identity-service/app/security/: cognito.py
services/identity-service/app/services/: cognito.py  events.py  notifications.py  repo_client.py  sqs.py  workflow_client.py
services/identity-service/tests/: conftest.py  test_auth_confirm.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_auth_verify_me.py  test_health.py  test_internal_member_delete.py  test_internal_memberships.py  test_internal_role_get.py  test_internal_role_update.py  test_invites_accept.py  test_invites_list.py  test_invites_resend.py  test_invites_revoke.py  test_invites_send.py  test_members_list.py  test_members_remove.py  test_members_role_change.py  test_ping.py  test_repos_create.py  test_repos_delete.py  test_repos_get.py  test_repos_list.py
services/repo-service/: Dockerfile  pyproject.toml
services/repo-service/app/: database.py  main.py
services/repo-service/app/api/: deps.py
services/repo-service/app/api/v1/: api.py
services/repo-service/app/api/v1/endpoints/: drafts.py  internal.py  rebase.py  view.py
services/repo-service/app/core/: config.py
services/repo-service/app/services/: efs.py  identity_client.py  storage.py
services/repo-service/tests/: conftest.py  test_conflicts_classify.py  test_drafts_create.py  test_drafts_delete.py  test_drafts_delete_file.py  test_drafts_explorer.py  test_drafts_files_read.py  test_drafts_list.py  test_drafts_mkdir.py  test_drafts_path_security.py  test_drafts_rename.py  test_drafts_role_access.py  test_drafts_save.py  test_drafts_update.py  test_drafts_upload.py  test_head_polling.py  test_health.py  test_internal_cache_invalidate.py  test_internal_delete_draft.py  test_internal_delete_member_drafts.py  test_internal_sync_blobs.py  test_ping.py  test_rebase_continue.py  test_reconstructing_sweep.py  test_sibling_rebase.py  test_view.py
services/workflow-service/: Dockerfile  pyproject.toml
services/workflow-service/app/: database.py  main.py
services/workflow-service/app/api/: deps.py
services/workflow-service/app/api/v1/: api.py
services/workflow-service/app/api/v1/endpoints/: commits.py  internal.py  repos.py
services/workflow-service/app/core/: config.py
services/workflow-service/app/services/: identity_client.py  notifications.py  repo_client.py
services/workflow-service/tests/: conftest.py  test_commits_approve.py  test_commits_approve_concurrent.py  test_commits_history.py  test_commits_list.py  test_commits_reject.py  test_commits_sibling_rejection_cascade.py  test_commits_status.py  test_commits_submit.py  test_committing_sweep.py  test_health.py  test_internal_cache_invalidate.py  test_internal_cancel_member_commits.py  test_ping.py
(+124 files in other folders)
